--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
 
 /*===== Colores =====*/
 :root {
-  --first-color: #4070f4;
+  --first-color: #548AA3;
   --second-color: #0e2431;
   --third-color: #ffffff;
 }
