--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+
 /*===== VARIABLES CSS =====*/
 :root {
   --header-height: 3rem;
@@ -20,6 +21,7 @@
   --h2-font-size: 1.25rem;
   --normal-font-size: 0.938rem;
 }
+
 @media screen and (min-width: 768px) {
   :root {
     --big-font-size: 3.5rem;
@@ -52,47 +54,75 @@
 ::after {
   box-sizing: border-box;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 body {
-  background-color: white;
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
 }
-.dark-mode{
+
+.dark-mode {
   background-color: black;
   color: var(--third-color);
 
 }
 
-.jobTitle{
+.jobTitle {
   font-size: 50px;
   font-weight: 800;
-  animation: blinker 6s linear infinite;
+  position: relative;
+  animation: blinker 6s infinite;
 }
 
+/* .jobTitle.sec-text:before{
+  content: "";
+  position:absolute;
+  top:0;
+  left:0; */
+/* background-color: #070508; */
+/* border-right: 2px solid #ffffff; */
+/* height:100%;
+  width:100%; */
+/* animation: animate 4s steps(12) infinite; */
+/* } */
+
 @keyframes blinker {
-  70%{
-    opacity: .2;
+  70% {
+    opacity: 0.2;
   }
 }
+
+/* @keyframes animate {
+  40%,60%{
+    left: 100%;
+  }
+  100%{
+    left:0%;
+
+  }
+} */
 
 h1,
 h2,
 p {
   margin: 0;
 }
+
 ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
+
 a {
   text-decoration: none;
 }
+
 img {
   max-width: 100%;
   height: auto;
@@ -102,15 +132,25 @@ img {
 
 
 /*===== CLASS CSS ===== */
+
+.bg-main {
+  background-image: url('/Week-2/portfolio.sudevvs/assets/img/bg-img2.jpg');
+  background-size: cover;
+  background-position: right;
+  /* opacity:0.9; */
+}
+
+
 .section-title {
   position: relative;
   font-size: var(--h2-font-size);
   /* color: var(--first-color); */
-  color: #548AA3;
+  /* color: #548AA3; */
   margin-top: var(--mb-2);
   margin-bottom: var(--mb-4);
   text-align: center;
 }
+
 .section-title::after {
   position: absolute;
   content: "";
@@ -123,6 +163,7 @@ img {
   /* background-color: var(--first-color); */
   background-color: #548AA3;
 }
+
 .section {
   padding-top: 3rem;
   padding-bottom: 2rem;
@@ -138,13 +179,15 @@ img {
   margin-left: var(--mb-2);
   margin-right: var(--mb-2);
 }
+
 .l-header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-color: #09090B;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 
@@ -170,16 +213,20 @@ img {
     transition: 0.5s;
   }
 }
+
 .nav-item {
   margin-bottom: var(--mb-4);
 }
+
 .nav-link {
   position: relative;
   color: #fff;
 }
+
 .nav-link:hover {
   position: relative;
 }
+
 .nav-link:hover::after {
   position: absolute;
   content: "";
@@ -190,14 +237,19 @@ img {
   background-color: var(--first-color);
 }
 
-.nav-logo{
-  color: #315160;
+.nav-logo {
+  color: #fff;
+  font-size:30px;
+  font-weight: 600;
+  /* color: var(--first-color); */
 }
+
 .nav-logo img {
   color: var(--second-color);
   font-weight: var(--font-semi);
   width: 3rem;
 }
+
 .nav-toggle {
   color: var(--second-color);
   font-size: 1.5rem;
@@ -225,31 +277,44 @@ img {
   height: calc(100vh - 3rem);
   row-gap: 1rem;
 }
+
 .home-data {
   align-self: center;
 }
+
 .home-title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
+  color: #fff;
 }
+
 .home-title-color {
   /* color: var(--first-color); */
-  color: #548AA3;
+  color: #9fc9dd;
+  /* color:#fff; */
 }
+
 .home-social {
   display: flex;
-  flex-direction: column;
+  height: 30px;
+  column-gap: 30px;
+  margin-top: 50px;
 }
+
 .home-social-icon {
   width: max-content;
-  margin-bottom: var(--mb-2);
+  /* margin-bottom: var(--mb-2); */
   font-size: 1.5rem;
-  color: var(--second-color);
+  /* color: var(--second-color); */
+  color: var(--third-color);
 }
-.home-social-icon:hover,
-.footer-icon:hover {
+
+.home-social-icon:hover {
   color: var(--first-color);
+  transform: scale(1.1);
+  transition: transform 0.15s;
 }
+
 .home-img {
   position: absolute;
   right: 0;
@@ -261,19 +326,18 @@ img {
 .button {
   display: inline-block;
   /* background-color: var(--first-color); */
-  background-color: #315160
-  ;
-  /* border: 1px solid var(--first-color); */
+  background-color: #315160;
+  border: 1px solid var(--first-color);
   border: 1px solid #315160;
   color: #fff;
-  padding: 0.75rem 2.5rem;
+  padding: 0.6rem 1.2rem;
   font-weight: var(--font-semi);
   border-radius: 0.5rem;
 }
+
 .button:hover {
-  background-color: #fff;
-  /* color: var(--first-color); */
-  color: #315160;
+  background-color: var(--first-color);
+  color: #fff;
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
 }
 
@@ -281,16 +345,20 @@ img {
 section.about {
   padding: 12vh 15px;
 }
+
 .about-container {
   row-gap: 2rem;
   text-align: center;
 }
+
 .about-subtitle {
   margin-bottom: var(--mb-2);
 }
+
 .about-img {
   justify-self: center;
 }
+
 .about-img img {
   width: 200px;
   border-radius: 0.5rem;
@@ -298,18 +366,18 @@ section.about {
 }
 
 .about-img img:hover {
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
   transition: 1s ease;
 }
 
 
 /* ===== EDUCATION =====*/
 
-.education-data{
+.education-data {
   /* border:1px solid red; */
-  
+
   /* justify-content: space-between;
   align-items: center; */
   position: relative;
@@ -322,38 +390,41 @@ section.about {
 }
 
 
-.education-name{
+.education-name {
   margin: 6px;
   display: flex;
   justify-content: center;
   align-items: center;
-   font-size: 20px;
-   cursor: pointer;
-  }
-  .education-platform{
-    margin: 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-     font-size: 16px;
-     cursor: pointer;
-    }
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;
+}
 
-    .education-duration{
-      margin: 6px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-       font-size: 12px;
-       cursor: pointer;
-      }
-  
-  .education-data:hover {
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
-    transition: 1s ease;
-  }
+.education-platform {
+  margin: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.education-duration {
+  margin: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.education-data:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: 1s ease;
+}
 
 
 
@@ -369,9 +440,11 @@ section.about {
 .skills-subtitle {
   margin-bottom: var(--mb-2);
 }
+
 .skills-text {
   margin-bottom: var(--mb-4);
 }
+
 .skills-data {
   display: flex;
   justify-content: space-between;
@@ -393,11 +466,13 @@ section.about {
   /* color: var(--first-color); */
   color: #315160;
 }
+
 img.man-icons {
   font-size: 2rem;
   margin-right: var(--mb-2);
   color: var(--first-color);
 }
+
 .skills-names {
   display: flex;
   align-items: center;
@@ -420,33 +495,42 @@ img.man-icons {
   border-radius: 0.5rem;
   z-index: var(--z-back);
 }
+
 .skills-html {
-  width: 75%;
+  width: 95%;
 }
+
 .skills-css {
-  width: 70%;
+  width: 90%;
 }
+
 .skills-js {
-  width: 85%;
+  width: 60%;
 }
+
 .skills-react,
 .skills-mongo {
   width: 80%;
 }
+
 .skills-redux {
   width: 90%;
 }
+
 .skills-mui,
 .skills-sql {
   width: 65%;
 }
+
 .skills-ts {
   width: 70%;
 }
+
 .skills-express,
 .skills-node {
   width: 85%;
 }
+
 .skills-img {
   border-radius: 0.5rem;
 }
@@ -461,36 +545,44 @@ img.man-icons {
   width: calc(100% - 2rem);
   margin: auto;
 }
+
 .project-img {
   box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
   border-radius: 0.5rem;
   overflow: hidden;
 }
+
 .project-img img {
   transition: 1s;
   cursor: pointer;
   margin-bottom: 0.5rem;
 }
+
 .project-img img:hover {
   transform: scale(1.1);
 }
+
 .project-container p {
   margin: auto 1rem 1rem;
 }
+
 .project-title {
   margin-bottom: var(--mb-2);
   margin-top: var(--mb-3);
   font-size: var(--h2-font-size);
 }
+
 .project-subtitle {
   margin-bottom: var(--mb-4);
   padding-bottom: 3.5rem;
 }
+
 .small-btn {
   padding: 0.3rem 1.3rem;
   font-weight: 400;
   margin: 1rem;
 }
+
 .project-btns {
   position: absolute;
   bottom: 0;
@@ -507,6 +599,7 @@ img.man-icons {
   outline: none;
   margin-bottom: var(--mb-4);
 }
+
 .contact-button {
   display: block;
   border: none;
@@ -524,38 +617,87 @@ img.man-icons {
   font-weight: var(--font-semi);
   padding: 3.5rem 0;
 }
+
 .footer-title {
   font-size: 2rem;
   margin-bottom: var(--mb-4);
 }
+
 .footer-social {
-  margin-bottom: var(--mb-4);
+  margin-top: 40px;
 }
+
 .footer-icon {
   font-size: 1rem;
   color: #fff;
   margin: 0 var(--mb-2);
 }
 
+.footer-icon:hover {
+  color: var(--first-color);
+  transform: scale(1.5);
+  transition: transform 0.15s;
+}
+
+.copyright {
+  margin-top: 40px;
+}
+
 /* ===== MEDIA QUERIES=====*/
 
 
-@media screen and (max-width: 768px) and (min-width: 300px){ 
+@media screen (max-width: 900px){
+  .nav-toggle {
+    display: inline !important;
+  }
+}
+
+
+@media screen and (max-width: 768px) and (min-width: 200px) {
   body {
     margin: 0;
   }
+
+  .bg-main{
+    height:90vh;
+  }
+
   .bd-grid {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .nav-list {
+    display: flex;
+    padding-top: 0;
+    display: flex;
+    padding-top: 0;
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 50px;
+  }
+
+  .nav-toggle {
+    display: inline !important;
+  }
+
   .home-img {
     right: 2%;
     width: 45%;
   }
-  .jobTitle{
+
+  .jobTitle {
     font-size: 36px;
     font-weight: 800;
-    animation: blinker 6s linear infinite;
+    /* animation: blinker 4s linear infinite; */
+    animation: typing 1.5s steps(10) infinite;
+  }
+
+  .footer-social {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 30px;
+    ;
   }
 }
 
@@ -564,13 +706,20 @@ img.man-icons {
   body {
     margin: 0;
   }
+
+  .bg-main{
+    height: 100vh;
+  }
+
   .section {
     padding-top: 4rem;
     padding-bottom: 3rem;
   }
+
   .section-title {
     margin-bottom: var(--mb-6);
   }
+
   .section-title::after {
     width: 80px;
     top: 3rem;
@@ -579,49 +728,64 @@ img.man-icons {
   .nav {
     height: calc(var(--header-height) + 1rem);
   }
+
   .nav-list {
     display: flex;
     padding-top: 0;
   }
+
   .nav-item {
     margin-left: var(--mb-6);
     margin-bottom: 0;
   }
+
   .nav-toggle {
     display: none;
   }
+
+  .bx {
+    color: #fff !important;
+  }
+
   .nav-link {
-    color: var(--second-color);
+    /* color: var(--second-color); */
+    color: #fff;
   }
 
   .home {
     height: 100vh;
   }
+
   .home-data {
     align-self: flex-end;
   }
+
   .home-social {
     padding-top: 0;
     padding-bottom: 2.5rem;
     flex-direction: row;
-    align-self: flex-end;
+    /* align-self: flex-end; */
   }
+
   .home-social-icon {
     margin-bottom: 0;
     margin-right: var(--mb-4);
   }
+
   .home-img {
     width: 38%;
     max-width: 420px;
     right: 2%;
     bottom: 15%;
   }
+
   .about-container {
     align-items: center;
     margin: auto;
     width: 50%;
     transition: 0.5s;
   }
+
   /* .about-container {
     width: 50%;
   } */
@@ -629,17 +793,21 @@ img.man-icons {
     grid-template-columns: repeat(2, 1fr);
     text-align: initial;
   }
+
   .about-img img {
     width: 300px;
   }
+
   .project-container {
     grid-template-columns: repeat(2, 1fr);
     /* grid-template-rows: repeat(2, 1fr); */
     column-gap: 3rem;
   }
+
   .contact-form {
     width: 360px;
   }
+
   .contact-container {
     justify-items: center;
   }
@@ -650,7 +818,54 @@ img.man-icons {
     margin-left: auto;
     margin-right: auto;
   }
+
   .home-img {
     right: 10%;
+  }
+
+}
+
+@media screen and (max-width:900px) {
+  body {
+    margin: 0;
+  }
+
+  .section {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+
+  .section-title {
+    margin-bottom: var(--mb-6);
+  }
+
+  .section-title::after {
+    width: 80px;
+    top: 3rem;
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 1rem);
+  }
+
+  .nav-list {
+    display: flex;
+    padding-top: 0;
+  }
+
+  .nav-item {
+    margin-left: var(--mb-6);
+    margin-bottom: 0;
+    margin-left: 30px;
+  }
+
+  .nav-toggle {
+    display: none;
+    color: #fff;
+  }
+
+  .nav-link {
+    /* color: var(--second-color); */
+    color: #fff;
   }
 }
